--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@loadable/component": "^5.15.3",
     "@mui/material": "^5.11.8",
     "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^8.6.0",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -41,6 +43,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
